# dell-st-lookup

./: .gitignore  LICENSE  README.md  config_example.yml  pyproject.toml  requirements_dev.txt
src/dell_st_lookup/: browser_profiles.py  config.py  database.py  device.py  lookuper.py
src/dell_st_lookup/app/: cli.py  parser.py
