[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "dell_st_lookup"
version = "0.0a1"
description = "Simple tool to scrap Dell product information from their support site when you don't have access to their API"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["dell", "servicetag", "service tag", "warranty"]
authors = [{name = "8ru73u5"}]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = [
    "selenium>=4.10",
    "PyYAML>=6.0"
]


[project.optional-dependencies]
testing = [
    "mypy>=1.3",
    "flake8>=6.0",
    "tox>=4.6"
]


[tool.setuptools.package-data]
dell_st_lookup = ["py.typed"]


[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
